# fileTesting

./: .replit  app.py  busywork.sh  commit.sh  commit_s.sh  commitfile.sh  info.txt  loadingbar.py  main.py  pyproject.toml  replit.nix  run.py  runall.sh  runapp.sh
FILETEST/: app.py  findfile.sh  lbr.py  main.py  run.py  runrunner.py  stop.sh
home/runner/ORR/: new.txt
